<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">PDF Converter</string>
    <string name="title">PDF Actions</string>
    <string name="file_name_text">File Name</string>
    <string name="select_images_text">Select Images</string>
    <string name="password_protect_pdf_text">Password Protect PDF</string>
    <string name="edit_images_text">Edit Images</string>
    <string name="open_pdf_text">Open PDF</string>
    <string name="create_pdf_text">Create PDF</string>
    <string name="details"><b>Details</b></string>
    <string name="search_hint">Name of file</string>
    <string name="search">search</string>
    <string name="set_page_size_text">Set Page Size</string>
    <string name="preview_image_to_pdf">Preview PDF</string>
    <string name="default_content_description">no description</string>
    <string name="prompt_input">Enter here</string>
    <string-array name="array_page_sizes_b0_b10" translatable="false">
        <item>B0 (2834 x 4008)</item>
        <item>B1 (2004 x 2834)</item>
        <item>B2 (1417 x 2004)</item>
        <item>B3 (1000 x 1417)</item>
        <item>B4 (708 x 1000)</item>
        <item>B5 (498 x 708)</item>
        <item>B6 (354 x 498)</item>
        <item>B7 (249 x 354)</item>
        <item>B8 (175 x 249)</item>
        <item>B9 (124 x 175)</item>
        <item>B10 (87 x 124)</item>
    </string-array>
    <string-array name="array_page_sizes_a0_b10" translatable="false">
        <item>A0 (2384 x 3370)</item>
        <item>A1 (1684 x 2384)</item>
        <item>A2 (1191 x 1684)</item>
        <item>A3 (842 x 1191)</item>
        <item>A4 (595 x 842)</item>
        <item>A5 (420 x 595)</item>
        <item>A6 (297 x 420)</item>
        <item>A7 (210 x 297)</item>
        <item>A8 (148 x 210)</item>
        <item>A9 (105 x 148)</item>
        <item>A10 (73 x 105)</item>
    </string-array>
    <string name="pdf_ext" translatable="false">.pdf</string>
    <string name="pdf_type" translatable="false">application/pdf</string>
    <string name="please_wait">Please Wait</string>
    <string name="bundleKey">ImageUri</string>
    <string name="whatsappToast">Sorry! Images could not be added. Please select the images from our **Select Images** option.</string>
    <string name="successToast">Images successfully added.</string>
    <string name="create_pdf">Create PDF</string>
    <string name="qr_barcode_pdf">QR &amp; Barcodes</string>
    <string name="viewFiles">View Files</string>
    <string name="extras">Extras</string>
    <string name="share">Share</string>
    <string name="help">Help</string>
    <string name="image_scale_type">Set Image Scale Type</string>
    <string name="select_scale_type">Select Image scaling type</string>
    <string name="stretch_image">Stretch image to fit on page</string>
    <string name="maintain_aspect_ratio">Maintain aspect ratio of images</string>
    <string name="scan_qrcode">Scan QR code</string>
    <string name="scan_barcode">Scan Barcode</string>
    <string name="qrbarcodes_to_pdf">Create PDF from QR &amp; Barcode</string>
    <string name="scan_cancelled">Cancelled Scan by user</string>
    <string name="snackbar_no_images">No Images selected</string>
    <string name="snackbar_no_pdfs_selected">No PDFs selected</string>
    <string name="snackbar_name_not_blank">Name cannot be blank</string>
    <string name="snackbar_permissions_given">Permissions Given!</string>
    <string name="snackbar_insufficient_permissions">Insufficient Permissions!</string>
    <string name="no_permissions">Please provide storage permissions to view your files.</string>
    <string name="prompt_give_permission">Provide permissions</string>
    <string name="snackbar_images_added">Images added</string>
    <string name="snackbar_file_renamed">File renamed.</string>
    <string name="snackbar_file_not_renamed">File can\'t be renamed.</string>
    <string name="snackbar_file_deleted">File deleted.</string>
    <string name="snackbar_file_not_deleted">File can\'t be deleted.</string>
    <string name="snackbar_folder_not_created">Error on creating application folder.</string>
    <string name="pdf_merged">PDFs Merged</string>
    <string name="pdf_merge_error">Unable to Merge. Files may be encrypted or in the external storage. Files on SD card are supported only currently.</string>
    <string name="creating_pdf">Creating PDF</string>
    <string name="enter_file_name">Enter file name</string>
    <string name="example">Example : abc</string>
    <string name="snackbar_no_pdf_app">No app to read PDF File</string>
    <string name="open_file">Open File</string>
    <string name="sort">Sort</string>
    <string name="set_password">Set Password</string>
    <string name="enter_password">Enter Password</string>
    <string name="snackbar_password_cannot_be_blank">Password cannot be blank</string>
    <string name="cannot_add_password">Password could not be applied to the PDF. Please check the PDF again.</string>
    <string name="snackbar_imagecropped">Images cropped</string>
    <string name="cropImage_activityTitle">Crop image No.</string>
    <string name="snackbar_pdfCreated">PDF created!</string>
    <string name="snackbar_viewAction">View</string>
    <string name="more_options_text">More Enhancement Options</string>
    <string name="delete">Delete</string>
    <string name="share_chooser">Select app to send message…</string>
    <string name="rate_us_text">Hi! I just checked this app in playstore. Try it out : https://play.google.com/store/apps/details?id=swati4star.createpdf .It converts images to PDF so smoothly. :)</string>
    <string name="snackbar_no_share_app">No application to share.</string>
    <string name="images_selected"> %1$d image(s) selected.</string>
    <string name="feedback_subject">Suggestions for Images To PDF Converter</string>
    <string name="feedback_text">Kindly write your precious feeback, or just drop a Hi! :)</string>
    <string name="snackbar_no_email_clients">There are no email clients installed.</string>
    <string name="feedback_chooser">"Send mail…"</string>
    <string name="no_pdf">No PDFs to show</string>
    <string name="get_started">Get Started Now</string>
    <string name="view_files_text">View all your converted files here!</string>
    <string name="empty_image_description">NoPdfs</string>
    <string name="enter_password_custom">Enter Password</string>
    <string name="example_pass_123">pass@123</string>
    <string name="remove_dialog">REMOVE</string>
    <string name="password_remove">Password Removed</string>
    <string name="merge_pdf">Merge PDF</string>
    <string name="merge_file_select">Select a file</string>
    <string name="File_hint_two" tools:keep="@string/File_hint_two">File Path for PDF two</string>
    <string name="merge_files">MERGE FILES</string>
    <string name="file_date_text">File Date</string>
    <string name="file_size_text">File Size</string>
    <string name="password_added">Password Added</string>
    <string name="encrypted_file">_encrypted.pdf</string>
    <string name="i_have_attached_pdfs_to_this_message">I have attached file(s) to this message</string>
    <string name="btn_sav_text">savText</string>
    <string name="filter_images_Text">Filter Images \n</string>
    <string name="nextimage_contentdesc">Next Image</string>
    <string name="compress_image">Image compression : %s%%</string>
    <string name="quality_image">Enter % compression of image :</string>
    <string name="invalid_entry">Invaid Entry</string>
    <string name="compress_dialog_enter_prompt">Enter here</string>
    <string name="compress_dialog_percentage">%</string>
    <string name="set_as_default">Set as default</string>
    <string name="decrypted_file">_unencrypted.pdf</string>
    <string name="decrypt_message">Enter the password to continue</string>
    <string name="not_encrypted">PDF is not Encrypted</string>
    <string name="incorrect_passowrd">Incorrect Password</string>
    <string name="save_current">Save Current</string>
    <string name="save_first">Save Current Image First</string>
    <string name="Filter_name">Filter</string>
    <string name="Filter_image_preview">Filter Image Preview</string>
    <string name="warning">Warning</string>
    <string name="overwrite_message">There already exists a file with the same name. Do you want to overwrite?</string>
    <string name="b0_to_b10">B0 to B10</string>
    <string name="a0_to_a10">A0 to A10</string>
    <string name="tabloid">TABLOID</string>
    <string name="executive">EXECUTIVE</string>
    <string name="ledger">LEDGER</string>
    <string name="letter">LETTER</string>
    <string name="legal">LEGAL</string>
    <string name="a4">A4</string>
    <string name="default_page_size">DEFAULT ( %s )</string>
    <string name="delete_alert">Do you want to delete all selected files?</string>
    <string name="sort_by_title">Sort by</string>
    <string name="directory">Directory</string>
    <string name="moving_files">Moving your files</string>
    <string name="success_move">Successfully moved your files</string>
    <string name="delete_directory">Delete Directory</string>
    <string name="dir_does_not_exists">Directory does not exists</string>
    <string name="move_files_delete_dir">Moving files and deleting the directory</string>
    <string name="directory_deleted">Directory deleted</string>
    <string name="success_delete_directory">Successfully deleted the directory</string>
    <string name="delete_dialog">This directory is not empty. Are you sure you want to delete it ?</string>
    <string name="moved_files">Files successfully moved</string>
    <string name="dialog_delete_dir">Enter the name of directory to delete</string>
    <string name="dialog_new_dir">Enter new directory name</string>
    <string name="dialog_dir">Enter the directory name</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="select_all">Select All</string>
    <string name="converting_file_message">Converting your files to PDF.</string>
    <string name="select_text_file">Select Text File</string>
    <string name="install_file_manager">Please install a File Manager</string>
    <string name="text_to_pdf">Text To PDF</string>
    <string name="text_file_selected">Text File Selected</string>
    <string name="select_file">"Select a File to Upload"</string>
    <string name="text_type">text/plain</string>
    <string name="new_directory">New Directory</string>
    <string name="move_n_files">Move Files</string>
    <string name="move_to_n_home_directory">Move to  Home Directory</string>
    <string name="previous_image_content_desc">Previous Image</string>
    <string name="text_file_name">"Text File : "</string>
    <string name="edit_font_size">Font Size (Default : %d)</string>
    <string name="enter_font_size">Enter font size</string>
    <string name="example_font">Example : 10</string>
    <string name="font_size_changed">Font Size Changed</string>
    <string name="font_size">Font Size : %1$s</string>
    <string name="about_us">About Us</string>
    <string name="app_description">An easy to use Android application to convert your files to PDF.</string>
    <string name="version">Version : </string>
    <string name="extract_images">Extract Images</string>
    <string name="split_success">The selected PDF was split successfully. It was split into %1$d PDF(s)</string>
    <string name="enter_rotation_angle">Enter Rotation Angle</string>
    <string name="degree_90" translatable="false">90 &#xb0;</string>
    <string name="degree_180" translatable="false">180 &#xb0;</string>
    <string name="degree_270" translatable="false">270 &#xb0;</string>
    <string name="share_files">Share Files</string>
    <string name="top">Top</string>
    <string name="bottom">Bottom</string>
    <string name="right">Right</string>
    <string name="left">Left</string>
</resources>