<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".QrBarcodeScanFragment"
        android:orientation="vertical"
        android:paddingTop="50dp"
        android:paddingBottom="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5sp"
            android:text="@string/qrbarcodes_to_pdf"
            android:textSize="15sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <swati4star.createpdf.customviews.MyCardView
                android:id="@+id/scan_qrcode"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                app:option_icon="@drawable/ic_qrcode_24dp"
                app:option_text="@string/scan_qrcode" />

            <swati4star.createpdf.customviews.MyCardView
                android:id="@+id/scan_barcode"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                app:option_icon="@drawable/ic_barcode_24dp"
                app:option_text="@string/scan_barcode" />

        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>